--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -64,7 +64,7 @@ h1 {
                 text-decoration: none;
                 font-size: 14px;
                 text-align: center;
-                color: white;
+                color: #fff;
                 &:hover {
                     text-decoration: underline;
                 }
@@ -90,6 +90,7 @@ h1 {
     &__cards {
         &-item {
             display: flex;
+            justify-content: space-between;
             max-width: 400px;
             background: linear-gradient(to right bottom,
                         rgba(255, 255, 255, 1),
@@ -104,10 +105,17 @@ h1 {
         }
         &-info {
             margin: 0 10px;
+            h2 {
+                color: #426696;
+                font-weight: 500;
+                font-size: 18px;
+                opacity: .8;
+            }
             .progress {
                 background: $bg-color;
                 width: 100%;
                 height: 25%;
+                border: 1px solid lightgray;
                 border-radius: 20px;
                 position: relative;
                 overflow: hidden;
